# BoxerUI

./: .gitignore  BoxerUI.filters  BoxerUI.sln  BoxerUI.vcxproj  BoxerUI.vcxproj.filters  BoxerUI_app  Boxer_Install.sh  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini  install_boxerUI.txt  main.cpp
.github/workflows/: cmake.yml  greetings.yml
BoxerUI/: BoxerUI.aps  BoxerUI.filters  BoxerUI.vcxproj  BoxerUI.vcxproj.filters  imgui.ini  receiver.cpp  socketLibrary.h
BoxerUI/Source Files/: BoxerUI_Controller.h  BoxerUI_Model.cpp  BoxerUI_Model.h  BoxerUI_Sockets.h  BoxerUI_View.h  main.cpp
BoxerUI/boxer_build/: CMakeLists.txt
BoxerUI/header/: Boxer.h  BoxerUI_Controller.h  BoxerUI_Model.h  BoxerUI_View.h  CameraStream_View.h  Controller_input_Header.h  CustomComponents_View.h  Inputs.h  Inputs_Model.h  TextTheme.h
BoxerUI/header/Networking/: a.out  node.h  test.cpp
BoxerUI/header/imgui/: imgui_draw.cpp  imgui_internal.h
BoxerUI/resource/: sensors.json  serverDocumentation
BoxerUI/src/: Boxer.cpp  BoxerUI.aps  BoxerUI.rc  BoxerUI_Controller.cpp  BoxerUI_Controller.h  BoxerUI_Model.cpp  BoxerUI_Model.h  BoxerUI_Sockets.h  BoxerUI_View.cpp  BoxerUI_View.h  CameraStream_View.cpp  Controller_input.cpp  CustomComponents_View.cpp  Inputs.cpp  Inputs_Model.cpp  TextTheme.h  camera_stream.cpp  imgui.ini  main.cpp  receiver.cpp  resource.h  socketLibrary.h
BoxerUI/src/Networking/: .gitignore  CMakeLists.txt  a.out  backend.cpp  frame_computation.cpp  frame_computation.h  node.cpp  node.h  server.cpp  socketLibrary.cpp  test  test.cpp  test_client  test_client.cpp  test_server  test_server.cpp  video_reciever.cpp
imgui/: imgui_demo.cpp
